# GeneFior

./: .gitignore  README.md  pyproject.toml
src/AMRfior/: AMRfior.py  constants.py  gene_stats.py  utils.py  workflow.py
src/AMRfior/databases/: README.md  build_amrfior_database.sh
src/AMRfior/databases/card/blast_aa/: protein_fasta_protein_homolog_model_SID_blastdb.phr  protein_fasta_protein_homolog_model_SID_blastdb.pin
src/AMRfior/databases/card/blast_dna/: nucleotide_fasta_protein_homolog_model_SID_blastdb.nhr  nucleotide_fasta_protein_homolog_model_SID_blastdb.nin
src/AMRfior/databases/card/bowtie2/: nucleotide_fasta_protein_homolog_model_SID_bowtie2db.2.bt2  nucleotide_fasta_protein_homolog_model_SID_bowtie2db.4.bt2  nucleotide_fasta_protein_homolog_model_SID_bowtie2db.rev.2.bt2
src/AMRfior/databases/card/bwa/: nucleotide_fasta_protein_homolog_model_SID_bwadb.ann  nucleotide_fasta_protein_homolog_model_SID_bwadb.pac
src/AMRfior/databases/card/diamond/: protein_fasta_protein_homolog_model_SID_diamonddb.dmnd
src/AMRfior/databases/ncbi/blast_aa/: sequence_aa_blastdb.phr  sequence_aa_blastdb.psq  sequence_aa_blastdb.pto
src/AMRfior/databases/ncbi/blast_dna/: sequence_dna_blastdb.nhr  sequence_dna_blastdb.nsq
src/AMRfior/databases/ncbi/bowtie2/: sequence_dna_bowtie2db.3.bt2  sequence_dna_bowtie2db.4.bt2
src/AMRfior/databases/ncbi/bwa/: sequence_dna_bwadb.pac  sequence_dna_bwadb.sa
src/AMRfior/databases/resfinder/blast_aa/: all_aa_blastdb.phr  all_aa_blastdb.pin  all_aa_blastdb.pot  all_aa_blastdb.psq  all_aa_blastdb.pto
src/AMRfior/databases/resfinder/blast_dna/: all_blastdb.ndb  all_blastdb.nhr  all_blastdb.nin  all_blastdb.nos  all_blastdb.nsq
src/AMRfior/databases/resfinder/bowtie2/: all_bowtie2db.2.bt2  all_bowtie2db.4.bt2  all_bowtie2db.rev.2.bt2
src/AMRfior/databases/resfinder/bwa/: all_bwadb.bwt  all_bwadb.pac  all_bwadb.sa
src/AMRfior/databases/resfinder/diamond/: all_aa_diamonddb.dmnd
src/GeneFior/: AMRfior.py  GeneFior.py  GeneFior_Gene_Stats.py  GeneFior_Recompute.py  constants.py  utils.py  workflow.py
src/GeneFior/databases/: README.md  build_database.sh
src/GeneFior/databases/ncbi/: README
(+16 files in other folders)
