[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GeneFior"
version = "0.5.0"
authors = [
    {name = "Nicholas Dimonaco", email = "nicholas@dimonaco.co.uk"}
]
description = "GeneFior: A toolkit that uses BLAST, BWA, Bowtie2, DIAMOND, and Minimap2 to search DNA and protein sequences against DNA and AA sequence databases."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["Antimicrobial Resistance", "Sequence Searching"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [

]

[project.urls]
Homepage = "https://github.com/NickJD/GeneFior"
"Bug Tracker" = "https://github.com/NickJD/GeneFior/issues"

[project.scripts]
AMRFior = "AMRfior.AMRfior:main"
AMRfior = "AMRfior.AMRfior:main"
amrfior = "AMRfior.AMRfior:main"
GeneFior-Recompute = "GeneFior.GeneFior_Recompute:main"
GeneFior-recompute = "GeneFior.GeneFior_Recompute:main"
genefior-recompute = "GeneFior.GeneFior_Recompute:main"
GeneFior-Gene-Stats = "GeneFior.GeneFior_Gene_Stats:main"
GeneFior-gene-stats = "GeneFior.GeneFior_Gene_Stats:main"
genefior-gene-stats = "GeneFior.GeneFior_Gene_Stats:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["GeneFior*"]

[tool.setuptools.package-data]
GeneFior = [
    # card
    "databases/card/diamond/*",
    "databases/card/bwa/*",
    "databases/card/minimap2/*",
    "databases/card/bowtie2/*",
    "databases/card/blast_dna/*",
    "databases/card/blast_aa/*",
    #resfinder
    "databases/resfinder/diamond/*",
    "databases/resfinder/bwa/*",
    "databases/resfinder/minimap2/*",
    "databases/resfinder/bowtie2/*",
    "databases/resfinder/blast_dna/*",
    "databases/resfinder/blast_aa/*",
    # ncbi
    "databases/ncbi/diamond/*",
    "databases/ncbi/bwa/*",
    "databases/ncbi/minimap2/*",
    "databases/ncbi/bowtie2/*",
    "databases/ncbi/blast_dna/*",
    "databases/ncbi/blast_aa/*",
]